<resources>
    <string name="app_name">App Portfolio</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="library_app">Library App</string>
    <string name="portfolio_title">My Nanodegree Apps!</string>
    <string name="scores_app">Scores App</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="title_activity_credits">Credits</string>
    <string name="xyz_reader">XYZ Reader</string>
</resources>
