<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PortfolioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:text="@string/portfolio_title" />

    <Button
        style="@style/PortfolioButton"
        android:text="@string/spotify_streamer"/>

    <Button
        style="@style/PortfolioButton"
        android:text="@string/scores_app"/>

    <Button
        style="@style/PortfolioButton"
        android:text="@string/library_app"/>

    <Button
        style="@style/PortfolioButton"
        android:text="@string/build_it_bigger"/>

    <Button
        style="@style/PortfolioButton"
        android:text="@string/xyz_reader"/>

    <Button
        style="@style/PortfolioButton"
        android:background="@color/red"
        android:textColor="@android:color/white"
        android:text="@string/capstone"/>

</LinearLayout>
